Updated CSP and callback handling

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <link rel="icon" href="%PUBLIC_URL%/fav.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Add these Content Security Policy meta tags -->
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.spotify.com https://sdk.scdn.co https://accounts.scdn.co">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Desi Hip-Hop - Explore best hip-hop artists and albums"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Desi Hip-Hop</title>
     <base href="/DesiHipHop/">
