--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="%PUBLIC_URL%/fav.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- Add these Content Security Policy meta tags -->
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.spotify.com https://sdk.scdn.co https://accounts.scdn.co">
+    <!-- Update CSP -->
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' blob:; script-src * 'unsafe-inline' 'unsafe-eval' blob:; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';">
     <meta
       name="description"
       content="Desi Hip-Hop - Explore best hip-hop artists and albums"
