Fixed CSP issues and improved auth flow

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- Update the favicon to use fav.png -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Update CSP -->
@@ -12,7 +12,7 @@
       name="description"
       content="Desi Hip-Hop - Explore best hip-hop artists and albums"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Desi Hip-Hop</title>
   </head>
