--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Update the favicon to use fav.png -->
-    <link rel="icon" href="%PUBLIC_URL%/fav.png" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- Update CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' blob:; script-src * 'unsafe-inline' 'unsafe-eval' blob:; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';">
     <meta
       name="description"
       content="Desi Hip-Hop - Explore best hip-hop artists and albums"
